# markssis

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml
specs/: requirements.md
ssis2fabric/: __init__.py  __main__.py  cli.py  models.py  parser.py
ssis2fabric/converters/: __init__.py  connections.py  dataflow.py  pipeline.py
ssis2fabric/fabric/: __init__.py  client.py
